# Python-Projects

FastAPI Project Setup/: Readme.md  pyproject.toml
FastAPI Project Setup/src/: main.py
FastAPI Project Setup/src/api/: router.py
FastAPI Project Setup/src/api/v1/routes/: health.py
FastAPI Project Setup/tests/: main_test.py
Learn ElasticSearch/: pyproject.toml
Learn ElasticSearch/src/: main.py  search.py
