[project]
name = "src"
version = "0.1.0"
description = "learn elastic search basics"
authors = [
    {name = "y"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch (>=8.17.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:start"
